# cloud-architect

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
cloud_architect/: __init__.py  schema.py  site.py  validate.py
schema/: categories.yaml  resources.yaml
site/: data.js  index.html
tests/: test_schema.py  test_site.py
